--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -1,4 +1,4 @@
-<%- include('../layouts/header', {title: 'checklist.name'}) %>
+<%- include('../layouts/header', {title: checklist.name}) %>
 <%- include('../layouts/menu') %>
 
 <section class="section">
@@ -8,7 +8,7 @@
                 <h1 class="title size-4"><%= checklist.name %></h1>
             </div>
             <div class="column is-one-fifth">
-                <a href="add-task.html" class="button is-success is-small">Nova Tarefa</a>
+                <a href="/checklists/<%= checklist._id %>/tasks/new" class="button is-success is-small">Nova Tarefa</a>
                 <a href="/checklists" class="button is-small">Voltar</a>
             </div>
         </div>
@@ -22,7 +22,7 @@
             </div>
             
             <div class="column is-one-fifth">
-                <button class="button is-danger is-small">Remover</button>
+                <a class="button is-danger is-small" href="/tasks/<%=task.id %>?_method=delete">Remover</a>
             </div>
         </div>
         <% }) %>
